# agent-fn-registry

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_fn_registry/: __init__.py
tests/: test_registry.py
