[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "agent-fn-registry"
version = "0.1.0"
description = "One-stop registry for LLM agent tools: pair a Python callable with its schema, side-effect tags, and optional default args. Dispatch by name, build Anthropic / OpenAI tools list. Zero deps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Rao Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "ai",
  "llm",
  "agents",
  "tool",
  "registry",
  "dispatch",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-fn-registry"
Source = "https://github.com/MukundaKatta/agent-fn-registry"
Issues = "https://github.com/MukundaKatta/agent-fn-registry/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_fn_registry"]
